# subtracker

./: docker-compose.yaml
backend/: .pre-commit-config.yaml  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/api/dependencies/: auth_dep.py
backend/app/api/routes/: auth_routes.py
backend/app/core/: logging_config.py  security.py  settings.py
backend/app/db/: base.py  database.py  dependencies.py  mixins.py  redis_client.py
backend/app/exceptions/: base.py  handlers.py  http_exceptions.py  middleware.py
backend/app/models/: user.py  user_models.py
backend/app/repositories/: base.py  user.py  user_repository.py
backend/app/schema/: user_schema.py
backend/app/services/: auth_service.py
frontend/: FINAL_SUMMARY.txt  biome.json  docker-compose.yaml  package.json  pnpm-lock.yaml
frontend/app/: Navbar.tsx  Sidebar.tsx  layout.tsx
frontend/app/dashboard/overview/: page.tsx
frontend/app/sidebar/: index.tsx  utils.ts
frontend/app/sidebar/components/: DropdownMenu.tsx  SidebarEvents.tsx  SidebarHeader.tsx  SidebarTabs.tsx  TabIndicator.tsx  TabItem.tsx  index.ts
frontend/app/sidebar/constants/: index.ts
frontend/app/sidebar/hooks/: index.ts  useDropdownOutsideClick.ts  useTabIndicator.ts
frontend/app/sidebar/types/: index.ts
frontend/features/auth/: README.md
