[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "kalilovM"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi-cli (>=0.0.13,<0.0.14)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py314']
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
line-length = 100    # Match with Black for consistency
target-version = "py314"
# For linting and auto-formatting
format.preview = true
exclude = ["tests/", "build/", "dist/"]
